# hexlet-django-blog

./: pyproject.toml
python_django_blog/: settings.py  urls.py  views.py
